--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bandsintown": "^1.0.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mongoose": "^4.2.3"
   }
 }
